turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: Boolean does not take parameters
  else (getCouleurSol() == Color.black){
                                       ^